Fix button alignment,remove show more button and move preview

--- a/src/module/catalog/src/datasets/components/Button/index.scss
+++ b/src/module/catalog/src/datasets/components/Button/index.scss
@@ -62,6 +62,7 @@
     width: 24px;
     height: 24px;
     min-width: 24px;
+    margin:0;
     margin-bottom:5px;
     line-height: 1;
 }
