--- a/src/module/catalog/src/datasets/dataset.css
+++ b/src/module/catalog/src/datasets/dataset.css
@@ -244,7 +244,7 @@ color:#1C4CD1;
 
 .datasetRow__content .entryName{
     width: 300px;
-    width:80%;
+    width:70%;
     padding: 15px;
     display: flex;
     flex-wrap: wrap;
@@ -254,10 +254,11 @@ color:#1C4CD1;
     margin: 15px;
     align-items: center;
 }
-.datasetModificationDate{
+
+.datasetRow__content .datasetModificationDate{
     color: #333;
     align-self: center;
-    width: 50px;
+    width: 150px;
 }
 
 @media (max-width: 820px) {
